[project]
name = "voltarium"
version = "0.5.1"
description = "Asynchronous Python client for CCEE (Brazilian Electric Energy Commercialization Chamber) API"
authors = [
    { name = "joaodaher", email = "joao@daher.dev" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.13"
keywords = ["ccee", "energy", "brazil", "api", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "ty>=0.0.16",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-rerunfailures>=16.1",
    "ruff>=0.15.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]


[project.urls]
Homepage = "https://github.com/joaodaher/voltarium-python"
Repository = "https://github.com/joaodaher/voltarium-python"
Documentation = "https://github.com/joaodaher/voltarium-python"
"Bug Tracker" = "https://github.com/joaodaher/voltarium-python/issues"

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = [
    ".git",
    ".ty",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["voltarium", "tests"]


[tool.ty]

[tool.ty.environment]
python-version = "3.14"
root = ["./src"]

[tool.pytest.ini_options]
addopts = [
    "--reruns=3",
    "--strict-markers",
    "--strict-config",
    "--cov=voltarium",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
package = true
